@@ -9,10 +9,10 @@ import uz.web.domain.entity.CourseEntity;
 import uz.web.domain.entity.CoursesOfUsersEntity;
 import uz.web.repo.CourseRepo;
 
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -22,18 +22,21 @@ public class CourseService extends BaseService<CourseEntity> {
     private final UserService userService;
     private final MentorService mentorService;
 
-    public List<CourseDAO> getAllCourse(boolean isActive) {
-        return getCourseDAOS(courseRepo.getAllCourse(isActive));
+    public List<CourseDAO> getAllCourse() {
+        return getCourseDAOS(courseRepo.getAllCourse());
     }
 
-    public List<CourseDAO> getCoursesOfUser(UUID userId) {
+    public List<CourseDAO> getCoursesByMentorId(UUID mentorId) {
+        return getCourseDAOS(courseRepo.getCoursesByMentorId(mentorId));
+    }
+
+    public List<CourseDAO> getCoursesByUser(UUID userId) {
         return getCourseDAOS(
                 userService.findById(userId)
                         .getCoursesOfUsersEntities()
                         .stream()
                         .map(CoursesOfUsersEntity::getCourse)
-                        .filter(CourseEntity::isActive)
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 
